# ProppPathfinding

Core/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  Pathfinding  cmake_install.cmake  quintic_test  spline_constructor_test  spline_math_test  spline_test  test1  trajectory_test
Core/Testing/Temporary/: CTestCostData.txt
Core/include/: io_helpers.hpp  math_util.hpp  spline.hpp  trajectory.hpp
Core/runConfig/: config.csv  config2.csv  grits3ball.csv  grits6balltrench.csv  grits8ballpt1.csv  gritsmiddle.csv  results.csv  wayPoints.csv
Core/src/: io_helpers.cpp  main.cpp  math_util.cpp  spline.cpp  trajectory.cpp
Core/test/: quintic_test.cpp  spline_constructor_test.cpp  spline_math_test.cpp  spline_test.cpp  trajectory_test.cpp
